--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "newsapp",
+  "homepage": "https://sandy75037.github.io/movieapp/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
